--- a/report/chapter5.tex
+++ b/report/chapter5.tex
@@ -1,5 +1,5 @@
 \chapter{Network}
-In this chapter, the two machines are in the same LAN, with switch bandwidth about 1000Mb/s.
+In this chapter, we use use two identical machines in LAN, with switch bandwidth about 1000Mb/s.
 
 \section{Round trip time}
 In this part, we try to measure the round trip time.
